--- a/lab-rats.Rmd
+++ b/lab-rats.Rmd
@@ -263,7 +263,7 @@ suicide_2 <- suicide %>% dplyr::right_join(suicide_complete)
 
 ## Visualizations
 
-```{r whr-gdp-happiness, fig.alt= "This gif shows the correlation between GDP per capita and happiness score from 2015 through 2019 in the World Happiness Report. The two variables have a positive correlation. That means higher GDP per capita correlates with higher happiness scores." }
+```{r whr-gdp-happiness, fig.alt= "This gif shows the correlation between GDP per capita and happiness score in the World Happiness Report from 2015 through 2019. The two variables have a positive correlation. That means higher GDP per capita correlates with higher happiness scores." }
 
 gdp_per_capita_1 <- ggplot(whr_2, aes(x = gdp_per_capita, y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -285,7 +285,7 @@ gdp_per_capita_2 <- animate(gdp_per_capita_1, nframes = 5, fps = 1.5, renderer =
 anim_save(filename = "gdp_per_capita_happiness.gif")
 ```
 
-```{r whr-social-support-happiness, fig.alt= ""This gif shows the correlation between access to social support and happiness score from 2015 through 2019 in the World Happiness Report. The two variables have a positive correlation. That means more social supports usually correlates with higher happiness scores."}
+```{r whr-social-support-happiness, fig.alt= ""This gif shows the correlation between access to social support and happiness score in the World Happiness Report from 2015 through 2019. The two variables have a positive correlation. That means more social supports usually correlates with higher happiness scores."}
 
 social_support_1 <- ggplot(whr_2, aes(x = social_support, y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -307,7 +307,7 @@ social_support_2 <- animate(social_support_1, nframes = 5, fps = 1.5, renderer =
 anim_save(filename = "social_support_happiness.gif")
 ```
 
-```{r whr-life-expectancy-happiness, fig.alt= "This gif shows the correlation between life expectancy and happiness score from 2015 through 2019 in the World Happiness Report. The two variables have a positive correlation. This means that longer life expectancies usually correlate with higher happiness scores."}
+```{r whr-life-expectancy-happiness, fig.alt= "This gif shows the correlation between life expectancy and happiness score in the World Happiness Report from 2015 through 2019. The two variables have a positive correlation. This means that longer life expectancies usually correlate with higher happiness scores."}
 
 life_expectancy_1 <- ggplot(whr_2, aes(x = life_expectancy, y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -329,7 +329,7 @@ life_expectancy_2 <- animate(life_expectancy_1, nframes = 5, fps = 1.5, renderer
 anim_save(filename = "life_expectancy_happiness.gif")
 ```
 
-```{r whr-freedom-happiness, fig.alt= "This gif shows the correlation between freedom ratings and the happiness score from 2015 through 2019 in the World Happiness Report. The two variables have a positive correlation. This means that more freedom usually correlates with higher happiness scores."}
+```{r whr-freedom-happiness, fig.alt= "This gif shows the correlation between freedom ratings and the happiness score in the World Happiness Report from 2015 through 2019. The two variables have a positive correlation. This means that more freedom usually correlates with higher happiness scores."}
 
 freedom_1 <- ggplot(whr_2, aes(x = freedom, y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -373,7 +373,7 @@ generosity_2 <- animate(generosity_1, nframes = 5, fps = 1.5, renderer = gifski_
 anim_save(filename = "generosity_happiness.gif")
 ```
 
-```{r whr-corruption-happiness}
+```{r whr-corruption-happiness fig.alt= "This gif shows the correlation between the perceived level of corruption in each country and the happiness score in the World Happiness Report from 2015 through 2019. The two variables have a positive correlation. This means that less corruption correlates with higher happiness scores."}
 
 perceptions_of_corruption_1 <- ggplot(whr_2, aes(x = as.numeric(perceptions_of_corruption), y = happiness_score)) +
   geom_point(alpha = 0.5) +
@@ -419,13 +419,14 @@ suicide_anim <- suicide_2 %>%
   geom_point(alpha = 0.5) +
   geom_miss_point(aes(color = happiness_score), alpha = 0.5) +
   geom_smooth(method = "lm") +
-  labs(x = "GDP per capita", y = "Suicide Rates", color = "WHR Happiness Score",
+  labs(x = "GDP per capita", y = "Suicide\nrates", color = "WHR happiness\nscore",
        title = "Correlation between GDP per capita,\nsuicide rates, and happiness score ({frame_time})") +
   theme_minimal() +
   theme(
     axis.text = element_text(size = 15),
     axis.title = element_text(size = 18),
-    plot.title = element_text(size = 20, face = "bold", hjust = 0),
+    axis.title.y = element_text(angle = 0, vjust = 0.5),
+    plot.title = element_text(size = 20, face = "bold", hjust = 0.25),
     plot.background = element_rect(fill = "white"),
     legend.title = element_text(size = 15),
     legend.text = element_text(size = 15)
